<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ima"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0E67F1"
    android:backgroundTint="@color/white"
    tools:context=".LogIn">


    <ImageView
        android:id="@+id/Imagelogin"
        android:layout_width="420dp"
        android:layout_height="400dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dashboard_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:background="@color/white"


        app:cardBackgroundColor="@color/white"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Imagelogin"
        app:layout_constraintVertical_bias="0.797"
        tools:visibility="visible">

        <TextView
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginStart="10dp"
            android:text="@string/login"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/outline_email_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="299dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/outline_lock_24"
            android:drawablePadding="10dp"
            android:drawableTint="@color/black"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="170dp"
            android:text="@string/forget_password"
            android:textColor="@color/design_default_color_primary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Submit"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="220dp"
            android:background="?android:attr/statusBarColor"
            android:hint="@string/SUBMIT"
            android:textColor="@color/white"

            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/REGISTER"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="290dp"
            android:background="?android:attr/statusBarColor"
            android:hint="@string/REGISTER"
            android:textColor="@color/white"

            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp" />


    </androidx.cardview.widget.CardView>









</androidx.constraintlayout.widget.ConstraintLayout>